--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "backend",
+  "name": "presencas-backend",
   "version": "1.0.0",
+  "description": "Backend para o sistema de presenças.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
-    "express": "^5.1.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-fetch": "^2.6.1"
   }
 }
